# carrycode

./: .gitignore  Cargo.toml  Config.toml  README.md  README_CN.md  log4rs.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: build-bun.ts  markdown-indent-check.mjs
src-rs/: config.rs  lib.rs
src-rs/cons/: mod.rs  provider_cons.rs
src-rs/ffi/: mod.rs  session.rs  session_util.rs
src-rs/llm/: mod.rs
src-rs/llm/agents/: agent.rs  mcp_tools.rs  mod.rs
src-rs/llm/mcps/: client.rs  mod.rs  tool.rs
src-rs/llm/models/: claude.rs  codex.rs  gemini.rs  mod.rs  openai.rs  (+3 more)
src-rs/lsp/: client.rs  config.rs  diagnostics.rs  mod.rs  protocol.rs  transport.rs
src-rs/policy/: approval_policy.rs  mod.rs  path_policy.rs  policy_text.rs
src-rs/session/: approval_policy.rs  confirm.rs  context.rs  id.rs  manager.rs  mod.rs  state.rs  store.rs  types.rs
src-rs/skills/: mod.rs  permission.rs  registry.rs  types.rs
src-rs/tests/: config.rs  mod.rs
src-ts/: index.tsx
src-ts/components/: App.tsx  InputArea.tsx  Markdown.tsx  OutputArea.tsx  ProcessArea.tsx  RichArea.tsx  SlashMenu.tsx  ToolConfirmMenu.tsx  WelcomeBanner.tsx  WelcomeConfigWizard.tsx  WelcomeModelWizard.tsx
src-ts/hooks/: useKeypress.ts  useRustBridge.ts  useTextBuffer.ts
src-ts/i18n/: index.ts
src-ts/theme/: context.tsx  index.ts  themes.ts  types.ts
src-ts/types/: carrycode-native.d.ts  index.ts  ink-stepper.d.ts  popcode-native.d.ts
src-ts/utils/: clipboardUtils.ts  loadCoreApi.ts  logger.ts  testWidth.ts  textUtils.test.ts  textUtils.ts
(+57 files in other folders)
