[package]
name = "carrycode-coreapi"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src-rs/lib.rs"

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
log = "0.4"
log4rs = "1.3"
reqwest = { version = "0.11", features = ["stream", "json", "blocking"] }
futures = "0.3"
regex = "1"
walkdir = "2"
ignore = "0.4"
similar = "2"
eventsource-stream = "0.2"
html2md = "0.2"
html2text = "0.12"
tower-lsp = "0.20"
async-stream = "0.3"
lazy_static = "1.4"
url = "2"
toml = "0.8"
dirs = "5.0"
unicode-width = "0.1"
unicode-segmentation = "1"
# strip-ansi-escapes = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
